set up local and prod testing
