# swagger-output-prod.json
@@ -8,7 +8,7 @@
   "host": "webservicesclass.onrender.com",
   "basePath": "/",
   "schemes": [
-    "http"
+    "https"
   ],
   "paths": {
     "/books/": {
@@ -25,6 +25,25 @@
       }
     },
     "/books/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      },
       "post": {
         "description": "",
         "produces": [
@@ -81,6 +100,71 @@
           },
           "500": {
             "description": "Internal Server Error"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Method Not Allowed"
+          }
+        }
+      }
+    },
+    "/books/create": {
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "Title": {
+                  "type": "string",
+                  "example": "Title"
+                },
+                "Author": {
+                  "type": "string",
+                  "example": "Author"
+                },
+                "Genre": {
+                  "type": "string",
+                  "example": "Genre"
+                },
+                "Publisher": {
+                  "type": "string",
+                  "example": "Publisher"
+                },
+                "ISBN": {
+                  "type": "string",
+                  "example": "ISBN"
+                },
+                "PublishedYear": {
+                  "type": "string",
+                  "example": "PublishedYear"
+                },
+                "AvailabilityStatus": {
+                  "type": "string",
+                  "example": "AvailabilityStatus"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "405": {
+            "description": "Method Not Allowed"
           }
         }
       }
